--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -1,7 +1,12 @@
 HELP.md
 .gradle
 build/
+# Gradle Wrapper 예외 처리
+!gradlew
+!gradlew.bat
+!gradle/wrapper/
 !gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
 !**/src/main/**/build/
 !**/src/test/**/build/
 
